--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js -e js,hbs"
+    "start": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "jquery": "^3.7.0",
